--- a/site/shared.templ
+++ b/site/shared.templ
@@ -5,6 +5,7 @@ import (
 	datastar "github.com/starfederation/datastar/sdk/go"
 	"net/http"
 	"strings"
+	"github.com/delaneyj/toolbelt"
 )
 
 templ Page(title, description string, uri string) {
