mobile: fix overflow issues (#567)

--- a/site/routes_examples_active_search.templ
+++ b/site/routes_examples_active_search.templ
@@ -19,7 +19,7 @@ type ActiveSearchUser struct {
 templ ActiveSearchComponent(filteredUsers []*ActiveSearchUser, scores map[string]float64, signals *ActiveSearchSignals) {
 	<div
 		id="active_search"
-		class="flex flex-col gap-4"
+		class="flex flex-col gap-4 overflow-scroll"
 		data-signals={ templ.JSONString(signals) }
 	>
 		<div class="flex">
