Revert "remove site shortcut because it breaks the 'bind keys' smoketest as they use the same keybinding" was flaky test not this shortcut that breaks test
This reverts commit aedad67e6d5b8aa65d3918026a81b6e8d6e4f656.

--- a/site/shared.templ
+++ b/site/shared.templ
@@ -143,6 +143,10 @@ templ SiteSearch(signals *SiteSearchSignals, searchResults []SearchResult, fromH
    					 fmt.Sprintf(`{"headers": {"%s": "%t"}}`, SearchFromHeaderKey, fromHeader),
 				)}
 				data-indicator="$searchFetching"
+				if fromHeader {
+					data-ref-site-search-input
+					data-on-keydown__window="evt.key == 'k' && (evt.metaKey || evt.ctrlKey) && ($siteSearchInput.focus(), evt.preventDefault())"
+				}
 			/>
 			<div class="absolute right-4 flex items-center h-full">
 				@sseIndicator("searchFetching")
