--- a/site/routes_home.templ
+++ b/site/routes_home.templ
@@ -71,9 +71,9 @@ templ Home() {
 				<p>Getting started is as easy as adding a single script tag to your HTML.</p>
 				<div class="w-full shadow-xl card bg-base-100">
 					<div class="card-body">
-						<div class="flex items-center gap-4">
+						<div class="flex items-center gap-4 -my-4">
 							<code
-								class="flex-1 overflow-auto text-primary text-ellipsis"
+								class="flex-1 overflow-auto text-primary text-ellipsis py-6"
 							>
 								<pre>{ cdnText }</pre>
 							</code>
