--- a/site/routes_home.templ
+++ b/site/routes_home.templ
@@ -9,7 +9,7 @@ import (
 
 templ Home() {
 	{{
-		cdnText := `<script type="module" src="https://cdn.jsdelivr.net/gh/starfederation/datastar@v1.0.0-beta.3/bundles/datastar.js"></script>`
+		cdnText := fmt.Sprintf(`<script type="module" src="https://cdn.jsdelivr.net/gh/starfederation/datastar@%s/bundles/datastar.js`, datastar.Version)
 	}}
 	{{
 		usageSample := `<input data-bind-title />
