Add tests and standard test setup

--- a/site/routes_tests_merge_refs.templ
+++ b/site/routes_tests_merge_refs.templ
@@ -2,6 +2,6 @@ package site
 
 templ mergeRefsTest() {
 	<div id="content">
-		<button data-ref-foo data-on-click="@get('/tests/merge_refs/data')" class="btn">bar</button>
+		<button data-ref-result data-on-click="@get('/tests/merge_refs/data')" data-val="1" class="btn">Merge</button>
 	</div>
 }
