--- a/site/routes_tests_merge_fragment_signal.templ
+++ b/site/routes_tests_merge_fragment_signal.templ
@@ -1,7 +1,7 @@
 package site
 
 templ mergeFragmentSignalTest() {
-	<div id="content" data-signals-foo="2">
-		<button data-on-click="@get('/tests/merge_fragment_signal/data')" class="btn btn-primary">Reload</button>
+	<div id="content" data-signals-result="1">
+		<button data-on-click="@get('/tests/merge_fragment_signal/data')" class="btn">Merge</button>
 	</div>
 }
