--- a/site/routes_home.templ
+++ b/site/routes_home.templ
@@ -123,7 +123,7 @@ templ Home() {
 					</a>
 				</div>
 				<p>
-					At only { humanize.CommafWithDigits( datastar.VersionClientByteSizeGzip / 1024.0, 1) } KiB, Datastar is smaller than Alpine.js and htmx, yet it provides the functionality of both libraries combined. The package size is not <em>just</em> a vanity metric. By embracing simplicity, and building on first principles, everything becomes cleaner and leaner. But don’t take our word for it – <a href="https://github.com/starfederation/datastar/tree/main">explore the source code</a> and see for yourself!
+					At only { humanize.CommafWithDigits( datastar.VersionClientByteSizeGzip / 1024.0, 1) } KiB, Datastar is smaller than Alpine.js and htmx, yet provides the functionality of both libraries combined. The package size is not <em>just</em> a vanity metric. By embracing simplicity, and building on first principles, everything becomes cleaner and leaner. But don’t take our word for it – <a href="https://github.com/starfederation/datastar/tree/main">explore the source code</a> and see for yourself!
 				</p>
 				<img class="w-full" src="/chart"/>
 				<div
